[ADD] client and server distinction added, compile instructions and some commands for the database instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(GOTproject)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(GOTproject main.cpp)
+add_executable(GOTproject main.cpp commands.cpp commands.h dbControl.cpp dbControl.h client.cpp)
