--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(GOTproject)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(GOTproject main.cpp commands.cpp commands.h dbControl.cpp dbControl.h client.cpp)
+add_executable(GOTproject main.cpp commands.cpp commands.h dbControl.cpp dbControl.h client.cpp ServerSocket.cpp ServerSocket.h ClientSocket.cpp ClientSocket.h)
